Blender Dark theme imported from 3.6.4 results in same colour for UIList active item and text selection #113683

Closed
opened 2023-10-13 17:07:40 +02:00 by Thomas Barlow · 2 comments
Member

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-11 23:03, hash: 67e4af3ea1cb
Worked:

Short description of error
Importing settings from 3.6.4 in 4.0.0b when 3.6.4 was using the Blender Dark theme ends up with the UIList text selection and active item colours being the same, making it impossible to see the text selection of the active item.

(I have not checked if there are similar issues with other themes)

3.6.4 4.0.0b theme imported from 3.6.4 4.0.0b theme reset/--factory-startup
image image image

Exact steps for others to reproduce the error

  1. Set Blender 3.6.4 theme to Blender Dark and reset the theme to ensure it's default (alternatively delete/rename 3.6 settings directory and then start 3.6.4 to create new default settings)
  2. Delete (or rename) 4.0 settings directory (%appdata%\Blender Foundation\Blender\4.0 on Windows)
  3. Start Blender 4.0.0b and choose to import settings from Blender 3.6
  4. Observe that the text selection colour in UILists is the same as the active item colour
  5. Reset the Blender Dark theme in 4.0.0b (or restart 4.0.0b with --factory-startup command line argument)
  6. Observe that the text selection colour in UILists is different to the active item colour
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-11 23:03, hash: `67e4af3ea1cb` Worked: **Short description of error** Importing settings from 3.6.4 in 4.0.0b when 3.6.4 was using the Blender Dark theme ends up with the UIList text selection and active item colours being the same, making it impossible to see the text selection of the active item. (I have not checked if there are similar issues with other themes) | 3.6.4 | 4.0.0b theme imported from 3.6.4 | 4.0.0b theme reset/--factory-startup | | -- | -- | -- | | ![image](/attachments/5a7077e6-a961-433a-b9d1-e846bffa5fa0) | ![image](/attachments/f9b64c1a-b325-41aa-9b76-b6a0394615b7) | ![image](/attachments/e86799cd-c12a-408e-ab2f-7aaa8402a6b4) | **Exact steps for others to reproduce the error** 1) Set Blender 3.6.4 theme to Blender Dark and reset the theme to ensure it's default (alternatively delete/rename 3.6 settings directory and then start 3.6.4 to create new default settings) 2) Delete (or rename) 4.0 settings directory (`%appdata%\Blender Foundation\Blender\4.0` on Windows) 3) Start Blender 4.0.0b and choose to import settings from Blender 3.6 4) Observe that the text selection colour in UILists is the same as the active item colour 5) Reset the Blender Dark theme in 4.0.0b (or restart 4.0.0b with `--factory-startup` command line argument) 6) Observe that the text selection colour in UILists is different to the active item colour
Thomas Barlow added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-10-13 17:07:40 +02:00

Can I confirm.
It seems like there should be versioning in this case.

@pablovazquez, any idea where this problem was introduced?

Can I confirm. It seems like there should be versioning in this case. @pablovazquez, any idea where this problem was introduced?
Member

Perhaps related #112032

Perhaps related #112032
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-31 13:10:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113683
No description provided.