Fix #113683: Wrong colors in UIList items after importing 3.6 theme

Theme changes for active/hover elements in 4.0 were missing versioning.