source/blender/blenloader/intern/versioning_userdef.cc
@@ -129,6 +129,10 @@ static void do_versions_theme(const UserDef *userdef, bTheme *btheme)
     FROM_DEFAULT_V4_UCHAR(space_sequencer.transition);
   }
 
+  if (!USER_VERSION_ATLEAST(400, 35)) {
+    memcpy(btheme, &U_theme_default, sizeof(*btheme));
+  }
+
   /**
    * Versioning code until next subversion bump goes here.
    *
